# dreamlog

./: .env.local  .gitignore  FILE_MANIFEST.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP.md  SQL_SCHEMA.sql  SQL_SHARES_SCHEMA.sql  START_HERE.md  TURKCE_BASLAT.md  TURKCE_TAMAMLANDI.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.path.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs  security.rs
src/api/: dream.ts  supabase.ts
src/components/: Calendar.tsx  DreamModal.tsx  Header.tsx  NotificationCenter.tsx  PinLock.tsx  StarRating.tsx  Toast.tsx
src/pages/: Auth.tsx  DreamDetail.tsx  Home.tsx  Settings.tsx
src/styles/: globals.css
src/types/: dream.ts
